labs/session-03-ingress/starter/frontend-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-ingressroute-<NOM>  # Remplacez <NOM> par votre prenom
  namespace: exercices
spec:
  entryPoints:
    - web
  routes:
    # TODO: add a route with the following configuration
    # - match: Host(`frontend-<NOM>.training.test`)
    # - kind: Rule
    # - services: list with one entry pointing to frontend-<NOM> on port 80
